--- a/src/Fonts/css/fontello.css
+++ b/src/Fonts/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?98253450');
-  src: url('../font/fontello.eot?98253450#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?98253450') format('woff2'),
-       url('../font/fontello.woff?98253450') format('woff'),
-       url('../font/fontello.ttf?98253450') format('truetype'),
-       url('../font/fontello.svg?98253450#fontello') format('svg');
+  src: url('../font/fontello.eot?96805103');
+  src: url('../font/fontello.eot?96805103#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?96805103') format('woff2'),
+       url('../font/fontello.woff?96805103') format('woff'),
+       url('../font/fontello.ttf?96805103') format('truetype'),
+       url('../font/fontello.svg?96805103#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?98253450#fontello') format('svg');
+    src: url('../font/fontello.svg?96805103#fontello') format('svg');
   }
 }
 */
@@ -56,5 +56,5 @@
 
 .icon-heart-empty:before { content: '\e800'; } /* '' */
 .icon-heart:before { content: '\e801'; } /* '' */
-.icon-doc-text:before { content: '\e802'; } /* '' */
-.icon-doc-text-inv:before { content: '\e803'; } /* '' */
+.icon-download-outline:before { content: '\e802'; } /* '' */
+.icon-download:before { content: '\e803'; } /* '' */
