--- a/src/Fonts/css/fontello.css
+++ b/src/Fonts/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?96805103');
-  src: url('../font/fontello.eot?96805103#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?96805103') format('woff2'),
-       url('../font/fontello.woff?96805103') format('woff'),
-       url('../font/fontello.ttf?96805103') format('truetype'),
-       url('../font/fontello.svg?96805103#fontello') format('svg');
+  src: url('../font/fontello.eot?49701774');
+  src: url('../font/fontello.eot?49701774#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?49701774') format('woff2'),
+       url('../font/fontello.woff?49701774') format('woff'),
+       url('../font/fontello.ttf?49701774') format('truetype'),
+       url('../font/fontello.svg?49701774#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?96805103#fontello') format('svg');
+    src: url('../font/fontello.svg?49701774#fontello') format('svg');
   }
 }
 */
@@ -54,7 +54,9 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-heart-empty:before { content: '\e800'; } /* '' */
-.icon-heart:before { content: '\e801'; } /* '' */
+.icon-heart:before { content: '\e800'; } /* '' */
+.icon-heart-empty:before { content: '\e801'; } /* '' */
 .icon-download-outline:before { content: '\e802'; } /* '' */
 .icon-download:before { content: '\e803'; } /* '' */
+.icon-export-outline:before { content: '\e804'; } /* '' */
+.icon-export:before { content: '\e805'; } /* '' */
