--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .font-outline-2 {
+    -webkit-text-stroke: 0.5px rgba(0.2,0.2,0.2,0.8);
+  }
+  .font-outline-4 {
+    -webkit-text-stroke: 1px #93C572;
+  }
+}
